[gd_scene load_steps=6 format=3 uid="uid://bkm0gebmrpw33"]

[ext_resource type="Script" uid="uid://da3oepi0c3hpd" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://ci0b7ln67wgsn" path="res://ship.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://clcrtfs705nnk" path="res://asteroid.tscn" id="2_h2yge"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dm0k"]
size = Vector2(40, 40)

[sub_resource type="Curve2D" id="Curve2D_ig7tw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -13, -11, 0, 0, 0, 0, 1162, -9, 0, 0, 0, 0, 1168, 664, 0, 0, 0, 0, -12, 656, 0, 0, 0, 0, -8, -8)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")
asteroid_scene = ExtResource("2_h2yge")

[node name="Ship" type="CharacterBody2D" parent="."]
position = Vector2(462, 307)
script = ExtResource("1_ig7tw")

[node name="ColorRect" type="ColorRect" parent="Ship"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="Ship"]
offset_left = -5.0
offset_top = -20.0
offset_right = 5.0
offset_bottom = -10.0
color = Color(0.917865, 0, 0.262865, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ship"]
shape = SubResource("RectangleShape2D_7dm0k")

[node name="BulletTimer" type="Timer" parent="Ship"]
wait_time = 0.75
one_shot = true

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ig7tw")

[node name="AsteroidPathFollow2D" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2(-13, -11)
rotation = 0.00170213

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="timeout" from="AsteroidTimer" to="." method="_on_asteroid_timer_timeout"]
